# rust-codice-fiscale

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: codicefiscale.rs  comuni.json  main.rs
