[package]
name = "codice-fiscale"
version = "0.1.0"
authors = ["Fortunato De Angelis <fortunato.deangelis@leadtech.it>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/fortunatodeangelis/rust-codice-fiscale"
readme = "README.md"
keywords = ["calcolo codice fiscale", "cf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"